--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button type="submit">Evaluar resultado</button>
   </form>
   <div id="result"></div>
-  <script src="usattRating.js"></script>
+  <script src="ecuadorratings.js"></script>
   <script>
     const usattForm = document.getElementById('usattForm');
     const resultDiv = document.getElementById('result');
